# Reload

./: .gitignore  .gitmodules  CMakeCPack.cmake  CMakeLists.txt  INSTALL.md  LICENSE  README.md  dependencies.lua  engine_premake5.lua  imgui.ini  premake5.lua  templates.txt
Assets/models/scenes/urho_test/: Test.xml
cmake/: Colors.cmake  FindImGui.cmake  HelperFunctions.cmake
engine/: engine_premake5.lua  premake5.lua  sys_config.debug.json  sys_config.json
engine/assets/shaders/: text.txt
engine/lib/VulkanMemoryAllocator/: vma_premake5.lua
engine/lib/VulkanMemoryAllocator/include/: vk_mem_alloc.h
engine/lib/VulkanMemoryAllocator/src/: vk_mem_alloc.cpp
engine/lib/fmt/: fmt_premake5.lua
engine/lib/openal/Alc/: panning.c
engine/lib/openal/examples/: alffplay.cpp
engine/lib/spdlog/: spdlog_premake5.lua
engine/src/: Common.h  Config.cpp  Config.h  ConfigManager.cpp  ConfigManager.h  Game.cpp  Game.h  Structs.h  Ui.cpp  Ui.h  main.cpp  precompiled.cpp  precompiled.h
engine/src/ReloadLib/: File.cpp  File.h  RldLib.h  nuklear.h  raymath.h
engine/src/ReloadLib/Containers/: Array.h  List.h
engine/src/ReloadLib/Extensions/: Str.h
engine/src/ReloadLib/sys/: Heap.cpp  Heap.h
engine/src/Renderer/: Context.h  Image.cpp  Image.h  ImageManager.cpp  ImageManager.h  Material.cpp  RenderBackend.cpp  RenderBackend.h  RenderCommon.h  RenderPipelineManager.cpp  RenderPipelineManager.h  RenderProgram.h  RenderState.h  RenderSystem.cpp  RenderSystem.h  StagingManager.cpp  StagingManager.h  VulkanCommon.h  VulkanHelpers.h  VulkanMemory.cpp  VulkanMemory.h
engine/src/Renderer/Backend/: Context.cpp  Context.h  DebugLayer.cpp  DebugLayer.h  Image.h  ImageManager.h  Material.h  RenderBackend.cpp  RenderBackend.h  RenderCommon.h  RenderLog.cpp  RenderLog.h  RenderPipelineManager.h  RenderProgram.cpp  RenderProgram.h  RenderState.h  Shader.cpp  Shader.h  StagingManager.cpp  StagingManager.h  VulkanCommon.h  VulkanHelpers.h  VulkanMemory.cpp  VulkanMemory.h
engine/src/Renderer/Backend/lib/stb/: stb_image.h
engine/src/Renderer/Backend/lib/vma/: vk_mem_alloc.cpp  vk_mem_alloc.h
engine/src/Windowing/: Window.cpp  Window.h
engine/src/editor/: node_editor.cpp
engine/src/lib/: File.cpp  File.h  RldLib.cpp  RldLib.h
engine/src/lib/containers/: List.h
engine/src/lib/sys/: Heap.cpp  Heap.h
engine/src/renderer/: DebugLayer.h  Image.cpp  Image.h  MemAllocator.cpp  MemAllocator.h  RenderBackend.cpp  RenderBackend.h  RenderCommon.h  RenderSystem.cpp  RenderSystem.h  Shader.cpp  Shader.h  Staging.cpp  Staging.h
engine/src/renderer/vulkan/: vk_mem_alloc.cpp  vk_mem_alloc.h
engine/src/sys/: Defs.h  Input.cpp  Input.h  Paths.cpp  Paths.h  Structs.h
engine/src/sys/patform/: linux.h
scripts/: premake-common.lua  premake-helpers.lua  premake-settings.lua  premake-triggers.lua  premake_cmake.sh  premake_cmake_clean.sh  premake_linux.sh  premake_linux_clean.sh
scripts/generate/linux/: premake_build_debug_linux.sh  premake_build_release_linux.sh  premake_gen_clion.sh
scripts/linux/: premake_cmake.sh  premake_cmake_clean.sh  premake_linux.sh  premake_linux_clean.sh
scripts/platform/linux/: clean.sh  premake_build_debug_linux.sh  premake_gen_clion.sh
scripts/platform/win/: clean.bat  premake_gen_vs.bat
scripts/premake/: settings.lua
scripts/premake/actions/: clean.lua  copy_assets.lua
scripts/win/: premake_gen_vs.bat
src/: CMakeLists.txt
src/Apps/: CMakeLists.txt
src/Apps/Editor/: CMakeLists.txt
src/Apps/Editor/include/: EditorLayer.h  SceneHierarchyPanel.h
src/Apps/Editor/include/ImGui/: ImGuiLayer.h  ImGuizmo.h
src/Apps/Editor/src/: Editor.cpp  EditorLayer.cpp
src/Apps/Editor/src/ImGui/: ImGuiLayer.cpp  ImGuizmo.cpp
src/Core/: CMakeLists.txt
src/Core/Assets/models/scenes/rooftop/: rooftop-degenerate.glb
src/Core/include/: Game.h  Layer.h  MathUtils.h  Types.h
src/Core/include/Entities/: CameraRig.h
src/Core/include/Renderer/: GridRenderer.h
src/Core/include/Scene/: Scene.h
src/Core/src/: Game.cpp  Layer.cpp  Main.cpp  MathUtils.cpp
src/Core/src/Entities/: CameraRig.cpp
src/Core/src/Renderer/: GridRenderer.cpp
src/Core/src/Scene/: Scene.cpp
src/Editor/: CMakeLists.txt  resources.conf
src/Editor/assets/models/scenes/rooftop/: rooftop-degenerate.fbx  rooftop-degenerate.mtl
src/Editor/include/: Editor.h  EditorLayer.h
src/Editor/include/ImGui/: ImGuiLayer.h
src/Editor/src/: Editor.cpp  EditorLayer.cpp  Main.cpp  SceneHierarchyPanel.cpp
src/Editor/src/ImGui/: ImGuiLayer.cpp
